Won the battle to make this compile on latest maven and jdk 11