@@ -55,10 +55,10 @@
     <msgpack.version>0.6.11</msgpack.version>
     <jetty.version>9.4.24.v20191120</jetty.version>
     <slf4j.version>1.7.6</slf4j.version>
-    <findbugs.version>3.0.0</findbugs.version>
+    <spotbugs.version>4.0.0</spotbugs.version>
     <sisu.version>0.3.0.M1</sisu.version>
     <guice.version>3.0</guice.version>
-    <jacoco.version>0.7.4.201502262128</jacoco.version>
+    <jacoco.version>0.8.5</jacoco.version>
     <shiro.version>1.2.3</shiro.version>
     <shiro.oauth.version>1.0</shiro.oauth.version>
   </properties>
@@ -82,12 +82,12 @@
         </configuration>
       </plugin>
       <plugin>
-        <groupId>org.codehaus.mojo</groupId>
-        <artifactId>findbugs-maven-plugin</artifactId>
-        <version>3.0.1</version>
+        <groupId>com.github.spotbugs</groupId>
+        <artifactId>spotbugs-maven-plugin</artifactId>
+        <version>${spotbugs.version}</version>
         <executions>
           <execution>
-            <id>checkfindbugs</id>
+            <id>checkspotbugs</id>
             <phase>package</phase>
             <goals>
               <goal>check</goal>
@@ -154,10 +154,15 @@
         </plugin>
         <plugin>
           <artifactId>maven-compiler-plugin</artifactId>
-          <version>3.1</version>
+          <version>3.8.1</version>
           <configuration>
-            <source>1.8</source>
-            <target>1.8</target>
+            <source>1.9</source>
+            <target>1.9</target>
+            <compilerArgs>
+              <arg>--add-exports</arg><arg>java.base/jdk.internal.perf=ALL-UNNAMED</arg>
+              <arg>--add-exports</arg><arg>java.management/sun.management.counter=ALL-UNNAMED</arg>
+              <arg>--add-exports</arg><arg>java.management/sun.management.counter.perf=ALL-UNNAMED</arg>
+            </compilerArgs>
           </configuration>
         </plugin>
         <plugin>
@@ -454,13 +459,6 @@
         <version>${slf4j.version}</version>
       </dependency>
       <dependency>
-        <groupId>com.sun</groupId>
-        <artifactId>tools</artifactId>
-        <version>1.4.2</version>
-        <scope>system</scope>
-        <systemPath>${java.home}/../lib/tools.jar</systemPath>
-      </dependency>
-      <dependency>
         <groupId>com.jcraft</groupId>
         <artifactId>jsch</artifactId>
         <version>0.1.53</version>
@@ -506,9 +504,9 @@
         <version>${sisu.version}</version>
       </dependency>
       <dependency>
-        <groupId>com.google.code.findbugs</groupId>
-        <artifactId>annotations</artifactId>
-        <version>${findbugs.version}</version>
+        <groupId>com.github.spotbugs</groupId>
+        <artifactId>spotbugs-annotations</artifactId>
+        <version>4.0.3</version>
         <scope>provided</scope>
       </dependency>
       <dependency>
@@ -560,17 +558,6 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-jxr-plugin</artifactId>
         <version>2.5</version>
-      </plugin>
-      <plugin>
-        <groupId>org.codehaus.mojo</groupId>
-        <artifactId>findbugs-maven-plugin</artifactId>
-        <version>3.0.1</version>
-        <configuration>
-          <xmlOutput>true</xmlOutput>
-          <htmlOutput>true</htmlOutput>
-          <effort>Max</effort>
-          <threshold>Low</threshold>
-        </configuration>
       </plugin>
       <plugin>
         <artifactId>maven-pmd-plugin</artifactId>
